Some minor fixes

--- a/Commander/appsettings.json
+++ b/Commander/appsettings.json
@@ -9,6 +9,6 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
 
-    "AppDbContext": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=CommanderDB; User ID =TYPE_USER_ID_HERE; Password=TYPE_PASSWORD_HERE"
+    "AppDbContext": "Server=(localdb)\\MSSQLLocalDB; Initial Catalog=CommanderDB; User ID =parweizh; Password=Ikikjjw1234"
   }
 }
